--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                   <div class="ftco-38-img">
                     <div class="ftco-38-header">
                       <img src="images/chef_1.jpg" alt="Free Website Template for Restaurants by Free-Template.co">
-                      <h3 class="ftco-38-heading">Daniel Graham</h3>
-                      <p class="ftco-38-subheading">Master Chef</p>
+                      <h3 class="ftco-38-heading">Kevin Wright</h3>
+                      <p class="ftco-38-subheading">Seat Sniffer</p>
                     </div>
                     <div class="ftco-38-body">
                       <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
