--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <div class="container">
               <div class="row align-items-center justify-content-center text-center">
                 <div class="col-md-10" data-aos="fade-up">
-                  <h2 class="heading mb-5">Welcome to mruktitokofficial, London's newest & hottest gay restaurant. Exclusive for all the saudis and shit.</h2>
-                  <p class="sub-heading mb-5">Free Website Template For Restaurants Made by <a href="#">Free-Template.co</a></p>
+                  <h2 class="heading mb-5">Welcome to mruktitokofficial, London's newest & hottest gay restaurant.</h2>
+                  <p class="sub-heading mb-5">Exclusive for all the saudis and illuminati people. Made by <a href="#">placeholder.com</a></p>
                   <p><a href="#section-reservation" class="smoothscroll btn btn-outline-white px-5 py-3">Reserve A Table</a></p>
                 </div>
               </div>
