--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <p class="mb-5">Jealous council officer gave us a wrong rating, he's a stupid troll this will be sorted soon!!!</p>
                     <p><a href="#" class="btn-link">Learn More <span class="ion-android-arrow-forward"></span></a></p>
                   </div>
-                  <div class="ftco-46-image" style="background-image: url(images/img_2.jpg);"></div> 
+                  <div class="ftco-46-image" style="background-image: url(images/img_2.png);"></div> 
                 </div>
 
                 <div class="ftco-46-row d-flex flex-column flex-lg-row">
@@ -247,7 +247,7 @@
 
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
-                        <img src="images/img_2.jpg" alt="Free Website Template for Restaurants by Free-Template.co">
+                        <img src="images/img_2.png" alt="Free Website Template for Restaurants by Free-Template.co">
                         <h3><a href="#">Key Wast Machos</a></h3>
                         <p>Crisp tortilla and plantain chips covered with lightly spiced ground beef, melted cheese, pickled jalapeños, guacamole, sour cream and salsa.</p>
                       </div>
@@ -284,7 +284,7 @@
                     
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
-                        <img src="images/img_2.jpg" alt="Free Website Template for Restaurants by Free-Template.co">
+                        <img src="images/img_2.png" alt="Free Website Template for Restaurants by Free-Template.co">
                         <h3><a href="#">Jumbo Lump Crab Stack</a></h3>
                         <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
                       </div>
@@ -317,7 +317,7 @@
 
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
-                        <img src="images/img_2.jpg" alt="Free Website Template for Restaurants by Free-Template.co">
+                        <img src="images/img_2.png" alt="Free Website Template for Restaurants by Free-Template.co">
                         <h3><a href="#">Grilled Chicken &amp; Tropical Fruit on Mixed Greens</a></h3>
                         <p>Lobster and tender shrimp, with onions, sweet peppers, spinach and our three cheese blend. Griddled and served with tomato salsa and sour cream.</p>
                       </div>
@@ -353,7 +353,7 @@
 
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
-                        <img src="images/img_2.jpg" alt="Free Website Template for Restaurants by Free-Template.co">
+                        <img src="images/img_2.png" alt="Free Website Template for Restaurants by Free-Template.co">
                         <h3><a href="#">Skirt Steak Churrasco</a></h3>
                         <p>A heaping mountain of rings, handmade with Panko breading and shredded coconut flakes.</p>
                       </div>
