--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                   </div>
                   <div class="ftco-46-image" style="background-image: url(images/img_3.jpg);"></div>
                   <div class="ftco-46-text ftco-46-arrow-up">
-                    <h4 class="ftco-46-subheading">Food</h4>
-                    <h3 class="ftco-46-heading">Chicken Chimichurri Croquettes</h3>
-                    <p class="mb-5">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+                    <h4 class="ftco-46-subheading">Luxury</h4>
+                    <h3 class="ftco-46-heading">Me and snoop dogg in Modiva nightclub, definitely not photoshopped.</h3>
+                    <p class="mb-5">As the tablebooking king I have met all sorts of royalty, i know all the saudis they did a dubai porta potty with me and katie price it was wicked.</p>
                     <p><a href="#" class="btn-link">Learn More <span class="ion-android-arrow-forward"></span></a></p>
                   </div>
                 </div>
